# vsm-field-workstation

./: .gitattributes  .gitignore  AGENTS.md  BRIEF.md  BUILD_FOLDER_USAGE_KO.md  CMakeLists.txt  CMakePresets.json  HARNESS_MASTER_KO.md  INDEX.md  README.md  README_SETUP_KO.md  START_HERE_KO.md
.agents/skills/doc-history-rollup/: SKILL.md
.agents/skills/graph-performance/: SKILL.md
.agents/skills/harness-maint/: SKILL.md
.agents/skills/qt-build-verify/: SKILL.md
.agents/skills/replay-semantics/: SKILL.md
.agents/skills/typed-evidence/: SKILL.md
.codex/: config.toml
.github/workflows/: windows-ci.yml
artifacts/: README.md
data/: model_pack_template.json  vms_model_R13.json  vms_model_drive_turn76_canzip_final.json  vms_model_drive_turn77_canzip_final_rev3.json  vms_model_turn77_system_drive_merged_final.json  vms_model_turn77_system_drive_merged_realcan_refresh2_final.json  vms_model_turn77_system_drive_merged_realcan_refresh_final.json  vms_rules_MERGED_R13.json  vms_signal_map_R13.json
docs/: BOARD_QT_FINAL_ARCHITECTURE.md  CODEX_HARNESS_KO.md  COMPLETION_TO_RELEASE_PLAN_KO.md  PLAN.md  PROJECT_FOLDER_GUIDE_KO.md  README.md  VSM_LOAD_UI_HANDOFF_20260610.md
docs/ai_harness/: AI_WORKFLOW_PHILOSOPHY_KO.md  BUILD_VERIFY_POLICY_KO.md  REGRESSION_MATRIX_KO.md
docs/android/: ANDROID_FEASIBILITY_KO.md
docs/architecture/: CONTROL_EVIDENCE_CONTRACT_KO.md  PROJECT_ARCHITECTURE_KO.md  PROJECT_CONSTITUTION_KO.md  TYPED_STREAM_PROTOCOL_V1_KO.md  VMS_ARCHITECTURE_KO.md  VMS_CSM_03_ARCHITECT_SYNTHESIS_FINAL.md  VSM_WORKSTATION_ARCHITECTURE_KO.md
docs/field/: 2026-05-28_latest_typed_log_triage_KO.md
docs/interfaces/: HW_SW_DATA_CONTRACT_KO.md  MODEL_PACK_FORMAT_KO.md
docs/quality/: architecture_map.md  coding_rules.md  release_checklist.md  requirements_traceability.md
docs/runbooks/: BUILD_AND_VERIFY_KO.md  FIELD_VALIDATION_KO.md  OBSIDIAN_VAULT_RULES_KO.md  RELEASE_AND_DEPLOY_KO.md  STANDALONE_GIT_WORKFLOW_KO.md  VSM_HIGH_LOAD_USER_ROUTE_HIL_KO.md
history/: INDEX.md
history/changes/: 2026-04-23-agents-before-harness-slimming.md  2026-04-23-brief-before-harness-slimming.md  2026-04-23-codex-harness-before-slimming.md  2026-04-23-retired-main-code-progress-skill.md  2026-05-18-vsm-architect-synthesis-codex-prompt.md  README.md  legacy-build-folder-usage-KO.md  legacy-cleanup-notes-KO.md  legacy-data-chat-handoff-KO.md  legacy-migration-order-KO.md  legacy-readme-setup-KO.md
history/decisions/: 2026-04-23-harness-slim-context-split.md  2026-05-12-vms-csm-contract-first-realignment.md  2026-05-26-build-token-budget-harness.md  2026-05-28-vertical-slice-verification-ladder.md  2026-05-29-self-contained-onboarding-docs.md  2026-06-10-vsm-load-ui-projection-boundary.md  2026-06-11-vsm-standalone-git-repo.md  README.md
history/incidents/: README.md  turn57_live_logging_ux_and_recorder_buffer.md  turn58_projection_throttle_and_replay_pacing.md  turn77_build_and_runtime_fix.md  turn77_runtime_actual_rootcause.md  turn78_build_fix.md
packaging/: SBOM.spdx.json  THIRD_PARTY_NOTICES.txt
qml/: Main.qml
qml/components/: ColumnHeaderCell.qml  DiagnosticStrip.qml  EmptyState.qml  FlowToolbar.qml  InfoCard.qml  PageViewport.qml  PreciseSlider.qml  SafeButton.qml  SafeCheckBox.qml  SafeTabButton.qml  SafeText.qml  StatusBadge.qml  UiMetrics.qml
qml/pages/: AlarmPage.qml  ControlPage.qml  GraphOverviewPage.qml  GraphPage.qml  LivePage.qml  OverviewPage.qml  ReplayPage.qml  SettingsPage.qml  TimingPage.qml  ValuePage.qml
replay_data/: README.md
replay_data/logs/: README.md
replay_data/snapshots/: README.md
scripts/: analyze_typed_capture.py  build_model_pack.py  build_qt_creator_checklist.txt  deploy_release.bat  field_latest_capture_report.py  hil_control_smoke.py  hil_vsm_user_route_stress.py  make_release_manifest.py  package_wix_installer.bat  run_release_here.bat
shared/protocol/: typed_record_ids.h  typed_stream_v1.md
src/: main.cpp
src/backend/: AlarmManager.cpp  AlarmManager.h  AnalysisTypes.h  AppController.cpp  AppController.h  AppLogging.cpp  AppLogging.h  BuildMetadata.cpp  BuildMetadata.h  CanTypes.h  ControlCommandEncoder.cpp  ControlCommandEncoder.h  DetailListModel.cpp  DetailListModel.h  FilePersistence.cpp  FilePersistence.h  FrameFilterProxyModel.cpp  FrameFilterProxyModel.h  FrameListModel.cpp  FrameListModel.h  GraphViewportItem.cpp  GraphViewportItem.h  LevelState.cpp  LevelState.h  ModelPack.cpp  ModelPack.h  ModelPackValidator.cpp  ModelPackValidator.h  PacketParser.cpp  PacketParser.h  Recorder.cpp  Recorder.h  ReplayEngine.cpp  ReplayEngine.h  ReplayRuntime.cpp  ReplayRuntime.h  RuntimePaths.cpp  RuntimePaths.h  SerialWorker.cpp  SerialWorker.h  (+18 more)
src/backend/control/: ControlAuditModel.cpp  ControlAuditModel.h  ControlCycleRuntime.cpp  ControlCycleRuntime.h  ControlRuntime.cpp  ControlRuntime.h  ControlSlewLimiter.cpp  ControlSlewLimiter.h
src/backend/evidence/: BoardConnectionState.cpp  BoardConnectionState.h  BusRoleResolver.cpp  BusRoleResolver.h  EvidenceRuntime.cpp  EvidenceRuntime.h
src/backend/transport/: HostTxQueue.cpp  HostTxQueue.h  HostTxRuntime.cpp  HostTxRuntime.h  LegacyIngressRuntime.cpp  LegacyIngressRuntime.h  TransportRuntime.cpp  (+7 more)
tests/: CMakeLists.txt  test_analysis_semantics.cpp  test_app_controller_analysis_source_flow.cpp  test_app_controller_export_snapshot.cpp  test_app_controller_log_flow.cpp  test_app_controller_replay_flow.cpp  test_control_audit_model.cpp  test_control_command_encoder.cpp  test_control_runtime_foundation.cpp  test_control_slew_limiter.cpp  test_evidence_runtime_foundation.cpp  test_file_persistence.cpp  test_model_pack_validator.cpp  test_packet_parser.cpp  test_qml_shell_smoke.cpp  test_recorder_flow.cpp  test_replay_engine.cpp  test_serial_worker_typed_ingest.cpp  test_storage_replay_runtime_paths.cpp  test_transport_runtime_foundation.cpp  test_typed_replay_reader.cpp  test_typed_transport_foundation.cpp  test_ui_state_store.cpp
tests/fixtures/: model_pack_invalid_duplicate_signal.json  model_pack_reserved_duplicates_allowed.json  model_pack_valid.json  typed_stream_v1.hex
